# ZarzCLI

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  GLM-PROVIDER.md  INSTALL.md  LICENSE  MCP.md  MODELS.md  PUBLISH.md  QUICKSTART.md  README.md  SECURITY.md  calculator.py  package.json  summary.txt  test_glm_mcp.txt  test_mcp.txt
.github/workflows/: release.yml
scripts/: postinstall.js
src/: auth.rs  auth_success.html  cli.rs  config.rs  conversation_store.rs  executor.rs  fs_ops.rs  main.rs  repl.rs  session.rs  unified_exec.rs  update.rs
src/intelligence/: context.rs  mod.rs  rust_parser.rs  symbol_search.rs
src/mcp/: client.rs  config.rs  manager.rs  mod.rs  types.rs
src/prompts/: codex_instructions.md
src/providers/: anthropic.rs  glm.rs  mod.rs  openai.rs
src/tools/: apply_patch.rs  grep_files.rs  list_dir.rs  mod.rs  read_file.rs  unified_exec.rs
