[package]
name = "zarz_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.5"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs", "io-util", "process"] }
async-trait = "0.1"
rustyline = "13.0"
crossterm = "0.27"
futures = "0.3"
tokio-stream = "0.1"
eventsource-stream = "0.2"
ignore = "0.4"
walkdir = "2.4"
tree-sitter = "0.20"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
regex = "1.10"
bytes = "1.5"
toml = "0.8"
quote = "1.0"
dirs = "5.0"
