[package]
name = "zarzcli"
version = "0.3.0-ALPHA"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dialoguer = "0.12"
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
similar = "2.7.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "process"] }
async-trait = "0.1.89"
rustyline = { version = "17.0.2", features = ["custom-bindings"] }
crossterm = "0.29.0"
futures = "0.3.31"
tokio-stream = "0.1.17"
eventsource-stream = "0.2.3"
ignore = "0.4.25"
walkdir = "2.5.0"
tree-sitter = "0.25.10"
syn = { version = "2.0.108", features = ["full", "parsing", "visit"] }
regex = "1.12.2"
bytes = "1.10.1"
toml = "0.9.8"
quote = "1.0.41"
dirs = "6.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
